<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/recipe_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/ingredient_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside" />

            <FrameLayout
                android:id="@+id/step_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerInside" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</FrameLayout>